--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Poppins", sans-serif;
+  color: #22343d;
+  background-color: #fff;
 }
 
 /* #region  */
@@ -27,6 +29,8 @@ a {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 button {
@@ -34,3 +38,312 @@ button {
   cursor: pointer;
   border: none;
 }
+
+/* common */
+.container {
+  max-width: 1150px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+/* #endregion  */
+
+/* #region header */
+.page-header {
+  background-color: #fff;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+  display: flex;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 0.93;
+  color: #173a56;
+  gap: 16px;
+  margin-right: 237px;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  gap: 30px;
+}
+.nav-list-item {
+}
+.nav-item-link {
+  display: block;
+  padding: 26px 0;
+  font-weight: 400;
+  font-size: 16px;
+
+  /* line-height: 28px; */
+  line-height: 1.75;
+  color: #22343d;
+}
+.active {
+  font-weight: 600;
+}
+.list-btn {
+  display: flex;
+  gap: 21px;
+  margin-left: auto;
+  align-items: center;
+}
+.list-btn-sign {
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  color: #173a56;
+  border: 1px solid #bcd0e5;
+  border-radius: 4px;
+  width: 105px;
+  height: 42px;
+  background-color: #fff;
+}
+.second {
+  width: 113px;
+  height: 42px;
+  background-color: #02897a;
+  border-radius: 4px;
+  color: #fff;
+}
+/* #endregion header */
+
+/* #region section hero */
+.section-hero {
+  margin: 25px 0 50px;
+}
+.hero-container {
+  display: flex;
+  gap: 35px;
+}
+
+.wrapper {
+  padding: 112px 0;
+}
+
+.hero-title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #22343d;
+  margin-bottom: 18px;
+}
+.hero-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55556;
+  color: #22343d;
+  max-width: 465px;
+  margin-bottom: 45px;
+}
+.hero-list {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+.hero-list-item {
+}
+.hero-list-btn {
+  font-weight: 700;
+  font-size: 16px;
+  color: #fff;
+  background-color: #02897a;
+  border-radius: 4px;
+  width: 178px;
+  height: 53px;
+}
+.hero-list-btn2 {
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #02897a;
+  width: 164px;
+  height: 23px;
+  background-color: #fff;
+}
+
+/* #endregion section hero */
+
+/* #region section feature */
+.section-feature {
+  background-color: #fff;
+  padding: 0 145px 50px 145px;
+}
+.feature-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 48px;
+  text-align: center;
+  color: #22343d;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.feature-list {
+}
+.feature-list-item {
+}
+.feature-list-subtitle {
+}
+.feature-list-text {
+}
+.feature-btn {
+}
+/* #endregion section feature */
+
+/* #region section Business management */
+.section-business {
+}
+.section-business-title {
+}
+.section-business-text {
+}
+.section-business-list {
+}
+.section-business-subtitle {
+}
+/* #endregion section Business management */
+
+/* #region section Support */
+.section-support {
+}
+.support-title {
+}
+.support-text {
+}
+.support-list {
+}
+.support-list-item {
+}
+.support-list-text {
+}
+/* #endregion section Support */
+
+/* #region section Collaboration */
+.section-collaboration {
+}
+.collaboration-title {
+}
+.collaboration-text {
+}
+.collaboration-list {
+}
+.collaboration-list-item {
+}
+.collaboration-list-subtitle {
+}
+.collaboration-list-text {
+}
+/* #endregion section Collaboration */
+
+/* #region section Quick & Easy */
+.section-quickeasy {
+}
+.section-quickeasy-title {
+}
+.section-quickeasy-text {
+}
+.section-quickeasy-list {
+}
+.section-quickeasy-list-item {
+}
+.section-quickeasy-list-text {
+}
+.section-quickeasy-list-btm {
+}
+/* #endregion section Quick & Easy */
+
+/* #region section News feed */
+.section-newsfeed {
+}
+.section-newsfeed-text {
+}
+.section-newsfeed-list {
+}
+.section-newsfeed-list-item {
+}
+.section-newsfeed-list-text {
+}
+.section-newsfeed-list-subtitle {
+}
+/* #endregion section News feed */
+
+/* #region section Pricing */
+.section-pricing {
+}
+.pricing-title {
+}
+.pricing-text {
+}
+.pricing-list {
+}
+.pricing-list-item {
+}
+.pricing-list-subtitle {
+}
+.pricing-list-text {
+}
+.pricing-list-subsubtitle {
+}
+.pricing-list-text-second {
+}
+.pricing-list-text-third {
+}
+.pricing-list-second {
+}
+.pricing-list-second-item {
+}
+.pricing-list-second-btm {
+}
+/* #endregion section Pricing */
+
+/* #region section Clients Say */
+.clients-title {
+}
+.clients-text {
+}
+.clients-list {
+}
+.clients-list-item {
+}
+.clients-list-text {
+}
+.clients-list-subtitle {
+}
+/* #endregion section Clients Say */
+
+/* #region section Join 100 */
+.section-join {
+}
+.join-title {
+}
+.join-btn {
+}
+/* #endregion section Join 100 */
+
+/* #region footer */
+.page-footer {
+}
+.logo-link {
+}
+.logo-footer {
+}
+.footer-subtitle {
+}
+.footer-list {
+}
+.footer-list-item {
+}
+/* #endregion footer */
