--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ button {
   line-height: 1.5;
   color: #22343d;
   margin-bottom: 18px;
+  max-width: 390px;
 }
 .hero-text {
   font-weight: 400;
@@ -180,7 +181,7 @@ button {
 /* #region section feature */
 .section-feature {
   background-color: #fff;
-  padding: 0 145px 50px 145px;
+  padding: 50px 0;
 }
 .feature-title {
   font-weight: 700;
@@ -188,95 +189,283 @@ button {
   line-height: 48px;
   text-align: center;
   color: #22343d;
-  text-align: center;
-  margin-bottom: 50px;
+  max-width: 500px;
+  margin: 0 auto 50px;
 }
 .feature-list {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 50px;
 }
 .feature-list-item {
+  width: calc((100% - 90px) / 4);
 }
 .feature-list-subtitle {
+  font-weight: 600;
+  font-size: 22px;
+  color: #22343d;
+  padding-bottom: 13px;
 }
 .feature-list-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
 }
 .feature-btn {
+  display: block;
+  margin: 0 auto;
+  font-weight: 700;
+  font-size: 16px;
+  color: #fff;
+  background-color: #02897a;
+  border-radius: 4px;
+  width: 175px;
+  height: 53px;
+  margin-bottom: 50px;
 }
 /* #endregion section feature */
 
 /* #region section Business management */
 .section-business {
+  margin: 0 50px;
+}
+.business-container {
+  display: flex;
+  gap: 84px;
+}
+.container-business-text {
+  padding: 41px 0;
 }
 .section-business-title {
+  font-weight: 700;
+  font-size: 32px;
+  color: #22343d;
+  margin-bottom: 25px;
+  width: 224px;
+}
+.section-business-title-span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #22343d;
+  padding: 8px;
+}
+.one {
+  margin-bottom: 30px;
 }
 .section-business-text {
+  font-weight: 400;
+  width: 486px;
+  line-height: 1.625;
+  color: #22343d;
+  margin-bottom: 25px;
 }
 .section-business-list {
+  margin-bottom: 25px;
 }
 .section-business-subtitle {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
 }
 /* #endregion section Business management */
 
 /* #region section Support */
 .section-support {
+  margin: 0 50px;
+}
+.support-container {
+  display: flex;
+  gap: 84px;
+}
+.one {
+  margin-bottom: 30px;
+}
+.container-support-text {
+  padding: 41px 35px 40px 0;
+}
+.support-title-span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #22343d;
 }
 .support-title {
+  font-weight: 700;
+  font-size: 32px;
+  color: #22343d;
+  width: 303px;
+  margin-bottom: 25px;
 }
 .support-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
+  margin-bottom: 25px;
 }
 .support-list {
+  margin-bottom: 25px;
 }
 .support-list-item {
+  width: 450px;
 }
-.support-list-text {
-}
+
 /* #endregion section Support */
 
 /* #region section Collaboration */
 .section-collaboration {
+  margin: 0 50px;
+}
+.collaboration-container {
+  display: flex;
+  gap: 84px;
+}
+.container-collaboration-text {
+  padding: 41px 0;
+  width: 486px;
+}
+.one {
+  margin-bottom: 30px;
+}
+.collaboration-title-span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #22343d;
+  margin-bottom: 8px;
 }
 .collaboration-title {
+  font-weight: 700;
+  font-size: 32px;
+  color: #22343d;
+  width: 226px;
+  margin-bottom: 25px;
 }
+
 .collaboration-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
 }
 .collaboration-list {
 }
 .collaboration-list-item {
+  margin-bottom: 25px;
 }
 .collaboration-list-subtitle {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
+  margin-bottom: 12px;
 }
-.collaboration-list-text {
-}
+
 /* #endregion section Collaboration */
 
 /* #region section Quick & Easy */
 .section-quickeasy {
+  margin: 100px 97px;
+}
+.container-quickeasy {
+  width: 916px;
 }
 .section-quickeasy-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  color: #22343d;
+  margin-bottom: 25px;
 }
 .section-quickeasy-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  color: #22343d;
+  margin-bottom: 40px;
 }
 .section-quickeasy-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 31px 100px;
+  margin-bottom: 50px;
 }
 .section-quickeasy-list-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 .section-quickeasy-list-text {
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #2f281e;
+  border-radius: 25px;
+  box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
+  padding: 14px 20px;
+  background-color: #fff;
 }
 .section-quickeasy-list-btm {
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  width: 216px;
+  height: 53px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #fff;
+  background-color: #02897a;
+  margin-bottom: 100px;
 }
+
 /* #endregion section Quick & Easy */
 
 /* #region section News feed */
 .section-newsfeed {
+  margin-bottom: 171px;
+}
+.section-newsfeed-container {
+  width: 1110px;
+}
+.section-newsfeed-title {
+  font-weight: 700;
+  font-size: 34px;
+  color: #22343d;
+  margin-bottom: 10px;
 }
 .section-newsfeed-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
+  margin-bottom: 40px;
+}
+.section-newsfeed-list-text-span {
+  font-weight: 700;
 }
 .section-newsfeed-list {
+  display: flex;
+  gap: 30px;
 }
 .section-newsfeed-list-item {
+  width: calc((100% - 60px) / 3);
 }
 .section-newsfeed-list-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.75;
+  color: #22343d;
+  margin-top: 24px;
+  margin-bottom: 12px;
 }
 .section-newsfeed-list-subtitle {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.66667;
+  color: #22343d;
 }
 /* #endregion section News feed */
 
